--- a/index.html
+++ b/index.html
@@ -9,21 +9,34 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <!-- Custom CSS -->
+    <link href="style.css" rel="stylesheet">
+
+
     <title>JS Typewriter - Text Animation</title>
 </head>
 
 <body>
-    <h1>
-        <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Sumon.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
-            <span class="wrap"></span>
-        </a>
-    </h1>
+
+    <main role="main" class="container">
+
+        <div class="starter-template">
+            <h1 class="typewrite" data-period="2000" data-type='[ "Hi, Im Sumon.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
+                <span class="wrap"></span>
+            </h1>
+        </div>
+
+    </main>
+    <!-- /.container -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <!-- JS Typewriter Text Animation Script -->
+    <script src="typewriter.js"></script>
 </body>
 
 </html>
